# gridiron-guru

./: .gitignore  ANNOUNCEMENTS.md  CHECKLIST.md  DEPLOYMENT.md  FIREBASE-SETUP.md  QUICKSTART.md  README.md  START-HERE.md  docker-compose.yaml  firebase.json  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: firebase-hosting-merge.yml
api/: .gitignore  README.md  alembic.ini  dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: c09adc718563_create_tables.py
api/app/: main.py  models.py
api/gridiron_guru_api/: main.py  models.py  routes.py
api/gridiron_guru_api/crud/: game.py  group.py  pick.py  tiebreaker.py  user.py
api/gridiron_guru_api/models/: user.py
api/gridiron_guru_api/schemas/: schemas.py
functions/: index.js  package-lock.json
prisma/: README.md
shared/: README.md
src/: App.css  App.jsx
src/components/: AdminPanel.jsx  Leaderboard.jsx  LiveTracker.jsx  PlayoffPicks.jsx  RegularSeasonPicks.jsx
src/data/: games.js  regularSeasonGames.js
src/test/: leaderboardHelpers.test.js  pickScoring.test.js  seasonHelpers.test.js
ui/: README.md  package-lock.json  package.json
ui/src/app/: layout.tsx
