[project]
name = "gridiron-guru-api"
version = "0.1.0"
description = "api for gridiron guru"
authors = [
    {name = "victorgmaciel",email = "victorgmaciel@protonmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]

[tool.poetry]
name = "gridiron_guru_api"
version = "0.1.0"
description = ""
authors = ["Victor Maciel <you@example.com>"]

# add this block under [tool.poetry]
packages = [
    { include = "gridiron_guru_api" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
